task14/frontend-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-app
  namespace: e-34
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: otabek.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: frontend-app
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
